--- a/Propiedades.ui
+++ b/Propiedades.ui
@@ -221,14 +221,14 @@
      <item row="11" column="1">
       <widget class="QLineEdit" name="le_precio_ars">
        <property name="inputMask">
-        <string>99.999.999</string>
+        <string>99999999</string>
        </property>
       </widget>
      </item>
      <item row="12" column="1">
       <widget class="QLineEdit" name="le_precio_uds">
        <property name="inputMask">
-        <string>999.999</string>
+        <string>999999</string>
        </property>
       </widget>
      </item>
