--- a/Propiedades.ui
+++ b/Propiedades.ui
@@ -221,14 +221,14 @@
      <item row="11" column="1">
       <widget class="QLineEdit" name="le_precio_ars">
        <property name="inputMask">
-        <string>99999999</string>
+        <string>########</string>
        </property>
       </widget>
      </item>
      <item row="12" column="1">
       <widget class="QLineEdit" name="le_precio_uds">
        <property name="inputMask">
-        <string>999999</string>
+        <string/>
        </property>
       </widget>
      </item>
@@ -364,8 +364,8 @@
    <slot>registrar_slot()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>209</x>
-     <y>560</y>
+     <x>210</x>
+     <y>557</y>
     </hint>
     <hint type="destinationlabel">
      <x>201</x>
@@ -380,12 +380,28 @@
    <slot>borrar_todo_slot()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>362</x>
-     <y>564</y>
+     <x>569</x>
+     <y>557</y>
     </hint>
     <hint type="destinationlabel">
      <x>360</x>
      <y>579</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>le_precio_ars</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>peso_change_slot()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>210</x>
+     <y>441</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>135</x>
+     <y>442</y>
     </hint>
    </hints>
   </connection>
@@ -396,5 +412,6 @@
   <slot>departamento_slot()</slot>
   <slot>registrar_slot()</slot>
   <slot>borrar_todo_slot()</slot>
+  <slot>peso_change_slot()</slot>
  </slots>
 </ui>
