--- a/Alquiladas.ui
+++ b/Alquiladas.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Lista</class>
- <widget class="QMainWindow" name="Lista">
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,21 +23,24 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Lista de Propiedades</string>
+   <string>Propiedades Alquiladas</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>0</y>
-      <width>1111</width>
-      <height>471</height>
+      <y>10</y>
+      <width>1101</width>
+      <height>501</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTableWidget" name="tb_departamentos">
+      <widget class="QTableWidget" name="tableWidget">
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>100</number>
+       </attribute>
        <column>
         <property name="text">
          <string>Direccion</string>
@@ -50,7 +53,7 @@
        </column>
        <column>
         <property name="text">
-         <string>N° Departamento</string>
+         <string>N° de Departamento</string>
         </property>
        </column>
        <column>
@@ -96,7 +99,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QTableWidget" name="tb_casas">
+      <widget class="QTableWidget" name="tableWidget_2">
        <column>
         <property name="text">
          <string>Direccion</string>
@@ -151,67 +154,34 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="verticalLayoutWidget_2">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>0</y>
-      <width>131</width>
-      <height>431</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QLabel" name="lb_departamentos">
-       <property name="text">
-        <string>Departamentos</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="lb_casas">
-       <property name="text">
-        <string>Casas</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QPushButton" name="pb_volver">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>440</y>
-      <width>89</width>
-      <height>25</height>
+      <x>40</x>
+      <y>120</y>
+      <width>101</width>
+      <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>Volver</string>
+     <string>Departamentos</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>380</y>
+      <width>41</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Casas</string>
     </property>
    </widget>
   </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pb_volver</sender>
-   <signal>clicked()</signal>
-   <receiver>Lista</receiver>
-   <slot>volver_slot()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>84</x>
-     <y>478</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>148</x>
-     <y>482</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
- <slots>
-  <slot>volver_slot()</slot>
- </slots>
+ <connections/>
 </ui>
