--- a/Propiedades.ui
+++ b/Propiedades.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>574</width>
-    <height>606</height>
+    <width>580</width>
+    <height>580</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>580</width>
+    <height>580</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>580</width>
+    <height>580</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Propiedades</string>
