--- a/Lista.ui
+++ b/Lista.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1285</width>
-    <height>480</height>
+    <width>1405</width>
+    <height>498</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1285</width>
-    <height>480</height>
+    <width>1405</width>
+    <height>498</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1285</width>
-    <height>480</height>
+    <width>1405</width>
+    <height>498</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
      <rect>
       <x>180</x>
       <y>0</y>
-      <width>1111</width>
+      <width>1211</width>
       <height>471</height>
      </rect>
     </property>
@@ -228,6 +228,73 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1405</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuOrdenar">
+    <property name="title">
+     <string>Ordenar</string>
+    </property>
+    <addaction name="actionPor_ID_2"/>
+    <addaction name="actionPor_Codigo_Postal"/>
+    <addaction name="actionPor_Ambientes"/>
+    <addaction name="actionPor_Metros_Cuadrados"/>
+    <addaction name="actionPor_Dormitorios"/>
+    <addaction name="actionPor_Precio"/>
+   </widget>
+   <addaction name="menuOrdenar"/>
+  </widget>
+  <action name="actionCasas">
+   <property name="text">
+    <string>Casas</string>
+   </property>
+  </action>
+  <action name="actionPor_ID_2">
+   <property name="text">
+    <string>Por ID</string>
+   </property>
+  </action>
+  <action name="actionPor_Piso">
+   <property name="text">
+    <string>Por Piso</string>
+   </property>
+  </action>
+  <action name="actionPor_N_de_Departamento">
+   <property name="text">
+    <string>Por N° de Departamento</string>
+   </property>
+  </action>
+  <action name="actionPor_Codigo_Postal">
+   <property name="text">
+    <string>Por Codigo Postal</string>
+   </property>
+  </action>
+  <action name="actionPor_Metros_Cuadrados">
+   <property name="text">
+    <string>Por Metros Cuadrados</string>
+   </property>
+  </action>
+  <action name="actionPor_Ambientes">
+   <property name="text">
+    <string>Por Ambientes</string>
+   </property>
+  </action>
+  <action name="actionPor_Dormitorios">
+   <property name="text">
+    <string>Por Dormitorios</string>
+   </property>
+  </action>
+  <action name="actionPor_Precio">
+   <property name="text">
+    <string>Por Precio</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections>
@@ -239,7 +306,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>52</x>
-     <y>464</y>
+     <y>486</y>
     </hint>
     <hint type="destinationlabel">
      <x>148</x>
@@ -255,7 +322,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>127</x>
-     <y>394</y>
+     <y>416</y>
     </hint>
     <hint type="destinationlabel">
      <x>158</x>
@@ -271,7 +338,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>59</x>
-     <y>357</y>
+     <y>379</y>
     </hint>
     <hint type="destinationlabel">
      <x>11</x>
@@ -287,11 +354,107 @@
    <hints>
     <hint type="sourcelabel">
      <x>146</x>
-     <y>420</y>
+     <y>442</y>
     </hint>
     <hint type="destinationlabel">
      <x>171</x>
      <y>424</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_ID_2</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_id()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_Codigo_Postal</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_codigo_postal()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_Ambientes</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_ambientes()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_Metros_Cuadrados</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_metros_cuadrados()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_Dormitorios</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_dormitorios()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionPor_Precio</sender>
+   <signal>triggered()</signal>
+   <receiver>Lista</receiver>
+   <slot>por_precio()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>702</x>
+     <y>248</y>
     </hint>
    </hints>
   </connection>
@@ -301,5 +464,13 @@
   <slot>alquilar_propiedad_slot()</slot>
   <slot>eliminar_propiedad_slot()</slot>
   <slot>ver_alquilados_slot()</slot>
+  <slot>por_id()</slot>
+  <slot>por_piso()</slot>
+  <slot>por_n_departamento()</slot>
+  <slot>por_codigo_postal()</slot>
+  <slot>por_ambientes()</slot>
+  <slot>por_metros_cuadrados()</slot>
+  <slot>por_dormitorios()</slot>
+  <slot>por_precio()</slot>
  </slots>
 </ui>
